--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "sass-loader": "^12.3.0",
     "socket.io": "^4.3.2",
+    "socket.io-client": "^4.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
