--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "express": "^4.17.1",
     "node-sass": "^6.0.1",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -21,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node ./src/server/server.js"
+    "server": "nodemon ./src/server/server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -29,6 +31,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:9999",
   "browserslist": {
     "production": [
       ">0.2%",
