--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "sass-loader": "^12.3.0",
     "socket.io": "^4.3.2",
     "socket.io-client": "^4.4.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -31,7 +33,6 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:9999",
   "browserslist": {
     "production": [
       ">0.2%",
